kubernetes/apps/database/crunchy-postgres-operator/pgadmin/httproute.yaml
---
apiVersion: gateway.networking.k8s.io/v1beta1
kind: HTTPRoute
metadata:
  name: pgadmin
  namespace: database
spec:
  hostnames:
    - "pga.${SECRET_DOMAIN}"
  parentRefs:
    - name: external
      namespace: kube-system
      sectionName: https
  ##Annotations not allowed
  #annotations:
  #  external-dns.alpha.kubernetes.io/target: external.${SECRET_DOMAIN}
  rules:
    - backendRefs:
        - name: pgadmin
          port: 5050
